<resources>
    <string name="app_name">Galaxy App</string>
    <string name="errorselect">The type, results and objectives of the visit must be determined and items added before saving</string>
    <string name="Home">HOME </string>
    <string name="SearchCustomer">Search Customer</string>
    <string name="resultofthevisit">Result of Visit</string>
    <string name="searchformaterial">Search for material</string>
    <string name="Returnrequest">Return Request</string>
    <string-array name="port">
        <item>NET</item>
        <item>BLE</item>
        <item>USB</item>
    </string-array>
    <string name="error_level">error_level</string>
    <string name="language">Language </string>
    <string name="bt_search_btn">Search Bluetooth Devices </string>
    <string name="bt_stop_search_btn">"Stop Searching Bluetooth Devices" </string>
    <string name="bt_tab">Bluetooth </string>
    <string name="bt_disconn_msg">"Bluetooth Disconnected" </string>
    <string name="bt_conn_msg">"Bluetooth Connected" </string>
    <string name="bt_conn_fail_msg">"Bluetooth Connection Failed" </string>
    <string name="bt_notconn_msg">"Bluetooth not connected." </string>
    <string name="dev_conn_btn">"Connect" </string>
    <string name="dev_disconn_btn">"Disconnect" </string>
    <string name="connecting_msg">"Connecting" </string>
    <string name="dev_check_msg">"Check the device status or settings." </string>
    <string name="week1">Week</string>
    <string name="lastupdate">last Update :</string>
    <string name="wifi_tab">"Wi-Fi" </string>
    <string name="wifi_disconn_msg">"Wi-Fi Disconnected" </string>
    <string name="wifi_conn_msg">"Wi-Fi Connected" </string>
    <string name="wifi_conn_fail_msg">"Wi-Fi Connection Failed" </string>
    <string name="wifi_notconn_msg">"Wi-Fi not connected." </string>
    <string name="print">"اسم العميل : فراس محمد سلمان " </string>
    <string name="scan">Scan </string>
    <string name="title_activity_main2">Main2Activity </string>
    <string name="title_activity_login">Sign in </string>
    <string name="prompt_email">Email </string>
    <string name="prompt_password">Password (optional) </string>
    <string name="action_sign_in">Sign in or register </string>
    <string name="action_sign_in_short">Sign in </string>
    <string name="error_invalid_email">This email address is invalid </string>
    <string name="error_invalid_password">This password is too short </string>
    <string name="error_incorrect_password">This password is incorrect </string>
    <string name="error_field_required">This field is required </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
     </string>
    <string name="title_activity_master">MasterActivity </string>
    <string name="title_item_list">Items </string>
    <string name="title_item_detail">Item Detail </string>
    <string name="navigation_drawer_open">Open navigation drawer </string>
    <string name="navigation_drawer_close">Close navigation drawer </string>
    <string name="action_settings">Settings </string>
    <string name="re">الإجمالي </string>
    <string name="sign">Sign </string>
    <string name="ProgressStatus">Progress and Status </string>
    <string name="enter_printer_id">Enter a Printer ID </string>
    <string name="enter_mac_address">Enter a MAC address </string>
    <string name="enter_opt_text">Enter optional text to print </string>
    <string name="signature_imageview_desc">Signature image </string>
    <string name="title_activity_capture_signature">CaptureSignatureActivity </string>
    <string name="sign_below">Sign below </string>
    <string name="button_save">Save </string>
    <string name="button_clear">Clear </string>
    <string name="button_cancel">Cancel </string>
    <string name="h">h</string>
    <string name="new_message_notification_title_template">New message: %1$s </string>
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
     </string>
    <string name="about">Update</string>
    <string name="action_share">Share </string>
    <string name="action_reply">Reply </string>
    <string name="title_activity_maps">Map </string>
    <string name="title_activity_google_maps">Map </string>
    <string name="title_activity_new_maps">Map </string>
    <string name="Clinicdoctorname">Clinic/Doctors Name</string>
    <string name="add">add</string>
    <string name="medicalvisits">Medical Visits</string>
    <string name="msg_notification_title_template">Msg: %1$s </string>
    <string name="msg_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
     </string>
    <string name="tot">0.000 </string>
    <string name="title_activity_galaxy_login">Sign in </string>
    <string name="User_Name">User Name </string>
    <string name="Password">Password </string>
    <string name="Login">Login </string>
    <string name="Main_Page"> HOME  </string>
    <string name="New">New </string>
    <string name="Save">Save </string>
    <string name="Print">Print </string>
    <string name="Delete">Delete </string>
    <string name="Post">Sumbit</string>
    <string name="Clint_Nane">Customer Name </string>
    <string name="Order_ID">Order ID </string>
    <string name="Client_ID">Customer No </string>
    <string name="Location">Location </string>
    <string name="Add_item">Add Item </string>
    <string name="item_no">Item No </string>
    <string name="Item_Name">Item Name </string>
    <string name="Price">Price </string>
    <string name="Quentity">Quentity </string>
    <string name="Unit">Unit </string>
    <string name="Tax">Tax </string>
    <string name="T_Tax">Tax value </string>
    <string name="Bounes">Bounes </string>
    <string name="Dics">Discount </string>
    <string name="Total">Total </string>
    <string name="Total_Tax">Total Tax </string>
    <string name="Net_Total">Net Total </string>
    <string name="Order_Item">Sel order </string>
    <string name="Order_Search"> Order Search </string>
    <string name="Add_Item1">Add Item </string>
    <string name="Add">Add </string>
    <string name="Cancle">cancel</string>
    <string name="Acc_Report">Account Statement </string>
    <string name="From_Date">From Date </string>
    <string name="Account_Num">Account Number </string>
    <string name="To_Date">To Date </string>
    <string name="month">month </string>
    <string name="openedsuccessfully">The tour has been opened successfully</string>
    <string name="Visitsummary">Visit Summary</string>
    <string name="withsupervisor">With Supervisor</string>
    <string name="errorup">An error occurred while checking for updates, please try again later</string>
    <string name="Pleaseselectaitem">Please select a item</string>
    <string name="mustselectkey">A key must be selected before adding the item</string>
    <string name="alreadyadded">The item has already been added</string>
    <string name="ok">ok</string>
    <string name="New_Search">New Search</string>
    <string name="Time">Time </string>
    <string name="Duration">Duration </string>
    <string name="posted">Posted</string>
    <string name="nonposted">Non Posted</string>
    <string name="postCompleteSucc">Post has been successful</string>
    <string name="postCompleteerr">The post process was unsuccessful</string>
    <string name="back">back</string>
    <string name="Deletepostedvisits">Delete posted visits</string>
    <string name="monthlypost">Post of the monthly plan</string>
    <string name="loginerror">The login information is incorrect</string>
    <string name="UpdateNotAllowedafterpost">Cannot be modified after posted</string>
    <string name="saveandpost">Cannot be posted before save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Pleasewait">Please Wait</string>
    <string name="postprogres">The post process is in progress</string>
    <string name="deleteconf">Are sure of the deleting process ..?</string>
    <string name="deleteerror">The deletion process was unsuccessful</string>
    <string name="deleteone">The deletion process was completed successfully</string>
    <string name="postmediacalvist">post mediacal vist</string>
    <string name="Chech_Acc"> Check balance </string>
    <string name="Clint_balance"> Client Balance </string>
    <string name="Max_Balance"> Facility cap </string>
    <string name="Net_Balance"> Final Balance </string>
    <string name="Search_Customer"> Customer </string>
    <string name="Sale_invoice"> Sales Invoice </string>
    <string name="Catch_Receipt"> Catch </string>
    <string name="Serial_Number">Serial Number </string>
    <string name="total_cash">Total cash </string>
    <string name="cash_type">Cash type </string>
    <string name="account_name">Account name </string>
    <string name="cash_amount">Cash </string>
    <string name="notes">Notes </string>
    <string name="checks_amount">Checks Sum </string>
    <string name="date">Ddate </string>
    <string name="coin_type">Coin Type </string>
    <string name="add_recv">Add Voucher </string>
    <string name="update_info">Update Data </string>
    <string name="Man_Summery">Daily Summary </string>
    <string name="Sales_invoic">Sales Invoices </string>
    <string name="T2">Receivables </string>
    <string name="T3">Sale Orders </string>
    <string name="T4">Verification Code </string>
    <string name="T5">Unphased Movements </string>
    <string name="Man_Balance">Inventory Adjustment </string>
    <string name="Number_Of_Item">Number of items </string>
    <string name="Trans_Q_Report">Report Quantity Inventory Reveal </string>
    <string name="Retrive_Data">Retrive Information </string>
    <string name="View_Item_Cost">Query item cost </string>
    <string name="Search_Item">Search for an item </string>
    <string name="Day">Today </string>
    <string name="Visit_List">Visit Schedule </string>
    <string name="Gallary_Item">Browse Items </string>
    <string name="FromStroe">From Repository </string>
    <string name="ToStore">To a Repository </string>
    <string name="OrderNo">Document number </string>
    <string name="TransQty">Material Transfer Document </string>
    <string name="ItemCount">Count of items </string>
    <string name="EnterUserName">Please enter your username! </string>
    <string name="EnterPassword">Please enter your password! </string>
    <string name="DisAmt">Discount Value </string>
    <string name="Disnubbmer">Value </string>
    <string name="disPrec">Discount Ratio </string>
    <string name="promotion">Promotions </string>
    <string name="time">Time </string>
    <string name="specialization">Specialization</string>
    <string name="evening">Evening</string>
    <string name="morning">Morning</string>
    <string name="Visitinginformation">Visiting Information</string>
    <string name="customerrating">Customer Rating</string>
</resources>