<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="35dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray1"
        android:orientation="horizontal"
        android:weightSum="9.4">
        <Methdes.MyTextView
            android:id="@+id/tv_Total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="#17181c"
            android:digits="#.000"
            android:gravity="center"
            android:text="Special Offer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textSize="14dp" />
        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="0.5dp"
            android:layout_weight="0.7"
            android:background="#000"
            android:scaleType="fitXY" />

        <Methdes.MyTextView
            android:id="@+id/tv_Total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="#17181c"
            android:digits="#.000"
            android:gravity="center"
            android:text="@string/Total"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textSize="16sp" />


        <Methdes.MyTextView
            android:id="@+id/tv_Tax_Amt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="0.7"
            android:background="#17181c"
            android:gravity="center"
            android:text="قيمة الضريبة"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="16sp" />
        <Methdes.MyTextView
            android:id="@+id/tv_Tax"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="0.7"
            android:background="#17181c"
            android:gravity="center"
            android:text="@string/Tax"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="16sp" />



        <Methdes.MyTextView
            android:id="@+id/tv_Price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="0.7"
            android:background="#17181c"
            android:gravity="center"
            android:text="@string/Price"
            android:textColor="#fff"
            android:textSize="16sp" />


        <Methdes.MyTextView
            android:id="@+id/tv_Bounce"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="0.7"
            android:background="#17181c"
            android:gravity="center"
            android:text="@string/Bounes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Methdes.MyTextView
            android:id="@+id/tv_Qty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="0.7"
            android:background="#17181c"
            android:gravity="center"
            android:text="@string/Quentity"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="16sp" />
        <Methdes.MyTextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1.9"
            android:background="#17181c"
            android:gravity="center"
            android:text="@string/Item_Name"
            android:textColor="#fff"
            android:textIsSelectable="false"
            android:textSize="16sp" />

        <Methdes.MyTextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1.3"
            android:background="#17181c"
            android:gravity="center"
            android:text="@string/item_no"
            android:textColor="#fff"
            android:textSize="16sp" />


    </LinearLayout>
</RelativeLayout>
