<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Add_New_Vist">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="2.5"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="match_parent">


        <Methdes.MyTextView
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:background="@color/Gray2"
            android:gravity="center"
            android:padding="10dp"
            android:layout_weight="0.1"
            android:text="@string/Visitinginformation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:weightSum="1.7"
            android:layout_weight="2"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="horizontal"
                >


                <TextView
                    android:id="@+id/textView284"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="horizontal"
                >

                <TextView
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time" />

                <EditText
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:visibility="gone"
                android:orientation="horizontal"
                >
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/radio_pirates"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/morning"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton android:id="@+id/radio_ninjas"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/evening"
                        android:layout_weight="1"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/addvist"
                android:background="@color/Footer_Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:textSize="25dp"
                android:textColor="@color/White"
                android:text="@string/add" />
            <Button
                android:id="@+id/deletevisit"
                android:background="@color/Footer_Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="25dp"
                android:layout_margin="5dp"
                android:textColor="@color/White"
                android:text="@string/Delete" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>