<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="500dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray1"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2.4"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/mContent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="1"
                android:background="@color/Blue"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:id="@+id/type"
                    android:text="@string/Search_Customer"
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/listsize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/Blue"
                    android:text=""
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:textSize="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/Blue"
                android:orientation="horizontal"
                android:weightSum="3">
                <EditText
                    android:id="@+id/Cust"
                    android:layout_width="0dp"
                    android:layout_margin="2dp"
                    android:hint="@string/Clint_Nane"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_edittext"
                    android:layout_weight="1" />
                <EditText
                    android:hint="@string/customerrating"
                    android:id="@+id/rating"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_margin="2dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_edittext"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_margin="2dp"
                    android:id="@+id/specialization"
                    android:hint="@string/specialization"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_edittext"
                    android:layout_weight="1" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="2"
                android:background="@drawable/blue_fill_white"
                android:orientation="horizontal"
                android:padding="2dp"
                android:weightSum="1">

                <android.support.v7.widget.RecyclerView
                    android:background="@color/White"
                    android:layout_width="300dp"
                    android:layoutDirection="ltr"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/lv" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.3"
                android:weightSum="2"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="20dp">


                <Button
                    android:id="@+id/btn_Clear"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:visibility="visible"
                    android:background="@color/Footer_Menu"
                    android:text="@string/New_Search"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_Cancel"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/ColorPrimary"
                    android:text="@string/back"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>


